# planes_everywhere

./: .gitignore  CLAUDE.md  Planes.ipynb  Planes_light.ipynb  README.md  Useful_queries.sql  import_tracks.py  planes.sqlite3  pyproject.toml  region-of-interest-DEM.tif
data/icao_8643_files/: Aerospatiale.json  Agusta.json  AgustaWestland.json  Airbus.json  AirbusHelicopters.json  AirbusHelicoptersHarbin.json  Antonov.json  Beechcraft.json  Bell.json  Boeing.json  Cessna.json  Cirrus.json  Dassault.json  Diamond.json  Embraer.json  Gulfstream.json  Ilyushin.json  Learjet.json  Leonardo.json  Mooney.json  Pilatus.json  Piper.json  Robinson.json  Saab.json  Sirosky.json  Tupolev.json  atr.json
planes_utils/fr24_importer/: __init__.py  flights.py  tracks.py  utils.py
planes_utils/icao8643/: __init__.py  database.py  icao_json.py
planes_utils/noise/: distance.py  elevation.py  noise.py
